--- a/design.html
+++ b/design.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="research.html">About</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="design.html">Our Design</a>
@@ -204,7 +204,7 @@
                   <div class="footer_menu">
                      <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="research.html">About</a></li>
                         <li><a href="design.html">Our Designe</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                      </ul>
