--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Storward</title>
+      <title>About</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -69,68 +69,6 @@
          </div>
       </div>
       <!-- header section end -->
-      <!-- banner section start -->
-      <div class="banner_section layout_padding">
-         <div id="main_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-            <i style="font-style: initial;">01</i>
-            </a>
-            <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-            <i style="font-style: initial;">02</i>
-            </a>
-         </div>
-      </div>
-      <!-- banner section end -->
       <!-- research section start -->
       <div class="layout_padding">
          <div class="container">
@@ -192,170 +130,8 @@
          </div>
       </div>
       <!-- research section end -->
-      <!--  design section start -->
-      <div class="design_section layout_padding">
-         <div id="my_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-            <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
-            </a>
-            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-            <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
-            </a>
-         </div>
-         <div class="container">
-            <div class="read_bt"><a href="#">Read More</a></div>
-         </div>
-      </div>
-      <!--  design section end -->
-      <!--  newsletter section start -->
-      <div class="newsletter_section layout_padding">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="imgage_6"><img src="images/img-6.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <h1 class="newsletter_taital">Subscribe Newsletter</h1>
-                  <input type="text" class="email_text" placeholder="Enter Your Email" name="Enter Your Email">
-                  <div class="subscribe_bt"><a href="#">Subscribe Now</a></div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!--  newsletter section end -->
-      <!-- contact section start -->
-      <div class="contact_section layout_padding">
-         <div class="container">
-            <div class="contact_section_2">
-               <div class="row">
-                  <div class="col-md-6">
-                     <div class="mail_section_1">
-                        <h1 class="contact_taital">Contact Us</h1>
-                        <input type="text" class="mail_text" placeholder="Name" name="text">
-                        <input type="text" class="mail_text" placeholder="Email" name="text">
-                        <input type="text" class="mail_text" placeholder="Phone Number" name="text">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
-                     </div>
-                  </div>
-                  <div class="col-md-6">
-                     <div class="map_main">
-                        <div class="map-responsive">
-                           <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="360" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- contact section end -->
       <!-- footer section start -->
-      <div class="footer_section">
+      <div class="footer_section margin_top_90">
          <div class="container">
             <div class="footer_location_text">
                <ul>
