--- a/index.html
+++ b/index.html
@@ -192,125 +192,61 @@
          </div>
       </div>
       <!-- research section end -->
-      <!--  design section start -->
-      <div class="design_section layout_padding">
-         <div id="my_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <h1 class="design_taital">Our Work Furniture</h1>
-                     <p class="design_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteratio</p>
-                     <div class="design_section_2">
-                        <div class="row">
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 01</p>
-                                 <div class="image_3" href="#"><img src="images/img-3.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Chair 02</p>
-                                 <div class="image_4" href="#"><img src="images/img-4.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                           <div class="col-md-4">
-                              <div class="box_main">
-                                 <p class="chair_text">Table</p>
-                                 <div class="image_4" href="#"><img src="images/img-5.png"></div>
-                                 <p class="chair_text">Price $100</p>
-                                 <div class="buy_bt"><a href="#">Buy Now</a></div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
+      <!-- personas section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Personas</h1>
+                     <p class="about_text">Through our user research, we have created two user archetypes of people who we believe are our target audience. These users have different personalities, goals, and look for different functionalities in applications. </p>
+                     <h3 class="contact_taital">Persona 1</h3>
+                     <div class="imgage_6"><img src="images/persona-1.png"></div>
+                     <h3 class="contact_taital">Persona 2</h3>
+                     <div class="imgage_6"><img src="images/persona-2.png"></div>
                   </div>
                </div>
             </div>
-            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-            <i class="fa fa-long-arrow-left" style="font-size:24px"></i>
-            </a>
-            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-            <i class="fa fa-long-arrow-right" style="font-size:24px"></i>
-            </a>
-         </div>
-         <div class="container">
-            <div class="read_bt"><a href="#">Read More</a></div>
          </div>
       </div>
-      <!--  design section end -->
+      <!-- personas section end -->
+      <!-- user journey section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">User Journeys</h1>
+                     <p class="about_text">Our potential users have many painpoints with the current way they have to go about handling their data collection, and we have mapped a few pathes they may take during their day of technology use.</p>
+                     <div class="imgage_6"><img src="images/user-journeys.png"></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- user jounry section end -->
+      <!-- application concept section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Application Concept</h1>
+                     <p class="about_text">Storward is an application which takes features that the elderly can benefit from and puts them in one platform.
+                        The name Storward is derived from two acronyms. One which is ‘store’ and the other being ‘steward’. 
+                        The ‘stor-’ acronym is used as the application is a platform where a user can store all kinds of information such as diaries, notes, passwords, medications, etc. 
+                        The -ward acronym from ‘steward’ means that the application is steward of the users data, meaning their data will be kept secured, accessible and trusted.</p>
+                     <p class="about_text">On our app, users will be able to store all sorts of information that they need to keep their lives organized and in check. They can write
+                        notes, make diary entries, store their passwords, save pictures and even set up a calendar with various appointments and events they want to keep track of. The goal
+                        is to allow these users to access as much of their commonly used information as possible in one place, so that they would be able to go to one place for everything
+                        and make things easier in their day to day lives.
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- application concept section end -->
       <!--  newsletter section start -->
       <div class="newsletter_section layout_padding">
          <div class="container">
