All content almost finished

--- a/design.html
+++ b/design.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Contact</title>
+      <title>Shop</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -44,16 +44,16 @@
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="research.html">About</a>
+                        <a class="nav-link" href="research.html">Our Research</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="design.html">Our Design</a>
+                        <a class="nav-link" href="personas.html">Personas, Journeys and Concept</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
+                        <a class="nav-link" href="design.html">Design Choices</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="mockups.html">Final Mockups</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -69,73 +69,74 @@
          </div>
       </div>
       <!-- header section end -->
-      <!-- contact section start -->
-      <div class="contact_section layout_padding">
+      <!-- sketches section start -->
+      <div class="layout_padding">
          <div class="container">
-            <div class="contact_section_2">
+            <div class="about_section_2">
                <div class="row">
-                  <div class="col-md-6">
-                     <div class="mail_section_1">
-                        <h1 class="contact_taital">Contact Us</h1>
-                        <input type="text" class="mail_text" placeholder="Name" name="text">
-                        <input type="text" class="mail_text" placeholder="Email" name="text">
-                        <input type="text" class="mail_text" placeholder="Phone Number" name="text">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">SEND</a></div>
-                     </div>
-                  </div>
-                  <div class="col-md-6">
-                     <div class="map_main">
-                        <div class="map-responsive">
-                           <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="360" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
-                        </div>
-                     </div>
+                  <div>
+                     <h1 class="banner_taital">Sketches</h1>
+                     <p class="about_text">Here are our first sketches of the application we are planning to develop. You can roughly see the mobile style interfaces, as well as the different pages we plan to have.</p>
+                     <div class="imgage_6"><img src="images/sketch.png"></div>
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <!-- contact section end -->
+      <!-- sketches section end -->
+      <!-- wireframes section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Wireframes</h1>
+                     <p class="about_text">These are the wireframes we based our final design off of. The main focus here was page placement and the relevant feature sizes, not stylizng and colours yet, which come in the following sections.</p>
+                     <div class="imgage_6"><img src="images/wireframes.png"></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- wireframes section end -->
+      <!-- color pallette section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Color Palette</h1>
+                     <p class="about_text">This is the color palette we decided to use. We feel the brown and light colors relax the user, and are more attractive to an older user base.</p>
+                     <div class="imgage_6"><img src="images/color-palette.png"></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- color palette section end -->
+      <!-- font section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Font</h1>
+                     <h3 class="contact_taital">Titles</h3>
+                     <p class="about_text">We use the Montagu Slab font for titles, as we felt the bold nature of the text made it appropriate to catch the eye as a header.</p>
+                     <div class="imgage_6"><img src="images/montagu-slab.png"></div>
+                     <h3 class="contact_taital">Regular Text</h3>
+                     <p class="about_text">We use the Lato font for regular text, because it is smooth to read and looks good to the eye.</p>
+                     <div class="imgage_6"><img src="images/lato.png"></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- font section end -->
       <!-- footer section start -->
       <div class="footer_section">
          <div class="container">
-            <div class="footer_location_text">
-               <ul>
-                  <li><img src="images/map-icon.png"><span class="padding_left_10"><a href="#">Loram Ipusm hosting web</a></span></li>
-                  <li><img src="images/call-icon.png"><span class="padding_left_10"><a href="#">Call : +7586656566</a></span></li>
-                  <li><img src="images/mail-icon.png"><span class="padding_left_10"><a href="#">demo@gmail.com</a></span></li>
-               </ul>
-            </div>
-            <div class="row">
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Useful link </h2>
-                  <div class="footer_menu">
-                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="research.html">About</a></li>
-                        <li><a href="design.html">Our Designe</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Repair</h2>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur  adipiscinaliqua  Loreadipiscing </p>
-               </div>
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Social Media</h2>
-                  <div id="social">
-                     <a class="facebookBtn smGlobalBtn active" href="#" ></a>
-                     <a class="twitterBtn smGlobalBtn" href="#" ></a>
-                     <a class="googleplusBtn smGlobalBtn" href="#" ></a>
-                     <a class="linkedinBtn smGlobalBtn" href="#" ></a>
-                  </div>
-               </div>
-               <div class="col-sm-6 col-lg-3">
-                  <h1 class="useful_text">Our Repair center</h1>
-                  <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaLoreadipiscing </p>
-               </div>
-            </div>
+            
          </div>
       </div>
       <!-- footer section end -->
