--- a/mockups.html
+++ b/mockups.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Shop</title>
+      <title>Contact</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -44,16 +44,16 @@
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="research.html">About</a>
+                        <a class="nav-link" href="research.html">Our Research</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="design.html">Our Design</a>
+                        <a class="nav-link" href="personas.html">Personas, Journeys and Concept</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
+                        <a class="nav-link" href="design.html">Design Choices</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="mockups.html">Final Mockups</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -69,62 +69,38 @@
          </div>
       </div>
       <!-- header section end -->
-      <!--  newsletter section start -->
-      <div class="newsletter_section layout_padding">
+      <!-- sketches section start -->
+      <div class="layout_padding">
          <div class="container">
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="imgage_6"><img src="images/img-6.png"></div>
-               </div>
-               <div class="col-md-6">
-                  <h1 class="newsletter_taital">Subscribe Newsletter</h1>
-                  <input type="text" class="email_text" placeholder="Enter Your Email" name="Enter Your Email">
-                  <div class="subscribe_bt"><a href="#">Subscribe Now</a></div>
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Mockups</h1>
+                     <p class="about_text">Here are our final mockups of the application we plan to build, with all the pages representing different features.</p>
+                     <h3 class="contact_taital">Home</h3>
+                     <div class="imgage_6"><img src="images/home.png"></div>
+                     <h3 class="contact_taital">Diary</h3>
+                     <div class="imgage_6"><img src="images/diary.png"></div>
+                     <h3 class="contact_taital">Notes</h3>
+                     <div class="imgage_6"><img src="images/notes.png"></div>
+                     <h3 class="contact_taital">Gallery</h3>
+                     <div class="imgage_6"><img src="images/gallery.png"></div>
+                     <h3 class="contact_taital">Passwords</h3>
+                     <div class="imgage_6"><img src="images/passwords.png"></div>
+                     <h3 class="contact_taital">Medications</h3>
+                     <div class="imgage_6"><img src="images/medications.png"></div>
+                     <h3 class="contact_taital">Appointments</h3>
+                     <div class="imgage_6"><img src="images/appointments.png"></div>
+                  </div>
                </div>
             </div>
          </div>
       </div>
-      <!--  newsletter section end -->
+      <!-- sketches section end -->
       <!-- footer section start -->
       <div class="footer_section">
          <div class="container">
-            <div class="footer_location_text">
-               <ul>
-                  <li><img src="images/map-icon.png"><span class="padding_left_10"><a href="#">Loram Ipusm hosting web</a></span></li>
-                  <li><img src="images/call-icon.png"><span class="padding_left_10"><a href="#">Call : +7586656566</a></span></li>
-                  <li><img src="images/mail-icon.png"><span class="padding_left_10"><a href="#">demo@gmail.com</a></span></li>
-               </ul>
-            </div>
-            <div class="row">
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Useful link </h2>
-                  <div class="footer_menu">
-                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="research.html">About</a></li>
-                        <li><a href="design.html">Our Designe</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Repair</h2>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur  adipiscinaliqua  Loreadipiscing </p>
-               </div>
-               <div class="col-lg-3 col-sm-6">
-                  <h2 class="useful_text">Social Media</h2>
-                  <div id="social">
-                     <a class="facebookBtn smGlobalBtn active" href="#" ></a>
-                     <a class="twitterBtn smGlobalBtn" href="#" ></a>
-                     <a class="googleplusBtn smGlobalBtn" href="#" ></a>
-                     <a class="linkedinBtn smGlobalBtn" href="#" ></a>
-                  </div>
-               </div>
-               <div class="col-sm-6 col-lg-3">
-                  <h1 class="useful_text">Our Repair center</h1>
-                  <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaLoreadipiscing </p>
-               </div>
-            </div>
+            
          </div>
       </div>
       <!-- footer section end -->
