Final version of the website

--- a/design.html
+++ b/design.html
@@ -136,7 +136,7 @@
       <!-- footer section start -->
       <div class="footer_section">
          <div class="container">
-            
+            <p class="about_text" style="color: white;">This Project was completed by Adam Qamar and Kevin Marnet Scanlan</p>
          </div>
       </div>
       <!-- footer section end -->
