--- a/index.html
+++ b/index.html
@@ -69,68 +69,25 @@
          </div>
       </div>
       <!-- header section end -->
-      <!-- banner section start -->
-      <div class="banner_section layout_padding">
-         <div id="main_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <h1 class="banner_taital">Best <br> Design <br>of Furnitur</h1>
-                           <p class="banner_text">It is a long established fact that a reader will bedistracted by the readable content of </p>
-                           <div class="btn_main">
-                              <div class="contact_bt"><a href="#">Contact US</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="image_1"><img src="images/img-1.png"></div>
-                        </div>
-                     </div>
+      <!-- introduction section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Introduction</h1>
+                     <p class="about_text">The post-pandemic world has been tough an every sector of the population, for now is safe from the reaches of a deadly virus. However, there
+                        are certain members of the population that might be put in a more vulnerable position due to the effects of a total lockdown of society. In Quebec, that portion
+                        of the population was the senios: the government has found that they struggle more than the average person, and have less support to top off. We have looked into
+                        this issue, and have come up with a comprehensive app solution that will hopeful provide some much needed relief to this oft forgotten age group: Storward, a place where 
+                        seniors will be able to do all their personal data management.
+                     </p>
                   </div>
                </div>
             </div>
-            <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-            <i style="font-style: initial;">01</i>
-            </a>
-            <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-            <i style="font-style: initial;">02</i>
-            </a>
          </div>
       </div>
-      <!-- banner section end -->
+      <!-- introduction section end -->
       <!-- research section start -->
       <div class="layout_padding">
          <div class="container">
@@ -339,10 +296,25 @@
          </div>
       </div>
       <!-- sketches section end -->
+      <!-- final thoughts section start -->
+      <div class="layout_padding">
+         <div class="container">
+            <div class="about_section_2">
+               <div class="row">
+                  <div>
+                     <h1 class="banner_taital">Final Thoughts</h1>
+                     <p class="about_text">This project allowed us to see what it is like to make an application for the elderly. This approach was definitely new to us which required us to view ideas in a perspective we have not done before. This allowed us to make an application where we could see the struggles of the elderly and try to make their life a little bit easier. We enjoyed making our project Storward and learned a lot from this project.
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- final thoughts section end -->
       <!-- footer section start -->
       <div class="footer_section">
          <div class="container">
-            
+            <p class="about_text"style="color: white;">This Project was completed by Adam Qamar and Kevin Marnet Scanlan</p>
          </div>
       </div>
       <!-- footer section end -->
